src/components/tables/tables.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/utilities';
//// Table Elements

table[border] {
  border-style: solid;
  border-color: #eee;
  td,
  th {
    border-color: #eee;
  }
}

table {
  font-size: $content-font-size;
  border-spacing: 0;
  border-collapse: collapse;
  color: $secondary;
  background-color: $white;

  td,
  th {
    padding: $md;
    vertical-align: bottom;
    font-size: $base-font-size;
  }

  th {
    color: $secondary;

    &:not([align]) {
      text-align: left;
    }
  }

  thead th {
    background-color: #fff;
    border-bottom: 1px solid #cccccc;
  }

  tbody th {
    background-color: #fff;
    border-right: 1px solid #cccccc;
    position: static;
    left: 0;
    padding-left: $md;
  }

  &.hover-highlight tbody tr:not(.is-selected),
  &.hover-highlight tbody tr:not(.is-selected):nth-child(even) {
    &:hover {
      th {
        background-color: #fff3c3
      }

      background-color: #fff3c3;
    }
  }

  &:not(.table__responsive) caption {
    width: 100%;
    padding: 1.05rem;
    text-align: center;
    font-size: 1rem;
    color: #fff;
    text-transform: uppercase;
    background-color: #333;
    font-weight: bold;
  }

  tbody tr:last-child td,
  tbody tr:last-child th {
    border-bottom-width: 0;
  }

  thead td,
  thead th {
    color: $secondary;
  }

  &.is-striped {
    border: 1px solid #eee;

    thead th {
      background: $primary;
      text-transform: uppercase;
      border: none;
    }

    tbody th {
      border: none;
    }

    tbody tr:not(.is-selected):nth-child(even),
    tbody tr:not(.is-selected):nth-child(even) th {
      background-color: $light;
    }
  }
}

table.gray-borders {
  border: #ddd 1px solid;

  & > tr,
  & > tbody > tr,
  & > tfoot > tr {
    & > td,
    & > th {
      border: #ddd 1px solid;
    }
  }

  & > thead > tr,
  & > caption {
    & > td,
    & > th {
      border: #7c7c7c 1px solid;
    }
  }
}

.table {
  &__responsive-container {
    width: 100%;
    position: relative;

    &--width-default {
      width: unset;
      display: inline-block;

      table.table--width-default {
        width: unset;
      }
    }

    &.table__row-headers--true {

      // A sticky heading is a heading in the JS generated table__responsive-header container.
      .table__sticky-heading:first-child {
        left: 0;
      }

      &.table--left-sticky-minwidth .table__sticky-heading:first-child {
        position: sticky;
      }
    }

    &.table--striped {
      border: 1px solid #eee;

      &.table--gray-borders {
        border: unset;
      }

      &.table--is-sticky-left.table--left-sticky-minwidth {
        table.is-striped tbody th {
          filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.2));
        }

        .table__sticky-heading:first-child {
          filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.2));
        }
      }

      &.table--is-sticky-top {
        .table__responsive-header {
          transition: filter 0.3s ease-in-out;
          filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.2));
        }
      }
    }

    &.table--gray-borders {
      .table__visual-caption {
        border: #7c7c7c 1px solid;
        border-bottom: none;
      }

      .table__responsive-header .table__sticky-heading {
        border-left: #7c7c7c 1px solid;
        border-top: #7c7c7c 1px solid;
        border-bottom: #7c7c7c 1px solid;
      }
    }

    table {
      width: 100%;

      &.is-striped {
        border: none;
      }

      caption {
        @include element-invisible;
      }
    }

    &.table--is-sticky-left.table--left-sticky-minwidth .table__sticky-heading:first-child {
      border-right: 1px solid #ccc;
    }

    .table__responsive-header__sticky-heading:first-child {
      border-right: 1px solid #fff;
      transition: border-right 0.3s ease-in-out;
    }

    &.table--is-sticky-left.table--striped.table--left-sticky-minwidth .table__sticky-heading:first-child {
      border-right: none;
    }

    &.table--left-sticky-minwidth table tbody th {
      position: sticky;
    }

    .text-formatted & div {
      line-height: inherit;
      font-size: $base-font-size;
      margin-bottom: 0;
    }
  }

  &__visual-caption {
    width: 100%;
    padding: 1.05rem;
    text-align: center;
    font-size: 1rem;
    color: #fff;
    text-transform: uppercase;
    background-color: #333;
    font-weight: bold;
  }

  &__responsive-header {
    position: sticky;
    z-index: 1;
    top: 0;

    &__scroller {
      white-space: nowrap;
      overflow-x: hidden;
    }

    .table--striped & {
      .table__sticky-heading {
        background: $primary;
        text-transform: uppercase;
        border: none;
      }
    }
  }

  &__sticky-heading {
    display: inline-block;
    padding: $md;
    vertical-align: bottom;
    font-size: $base-font-size;
    color: $secondary;
    background-color: #fff;
    border-bottom: 1px solid #cccccc;
    text-align: left;

    .text-positioner {
      white-space: break-spaces;
      display: flex;
      align-items: flex-end;
      width: 100%;
      height: 100%;
      font-weight: bold;
    }
  }

  &__container {
    overflow-x: auto;
  }

  &.table--static {

    tbody th,
    thead th {
      position: static;
    }
  }
}

